80% done with the navbar

--- a/src/components/navbarStyles.css
+++ b/src/components/navbarStyles.css
@@ -1,10 +1,16 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1b2430;
-    padding: 20px 80px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06 );
+    background: rgba(0, 0, 0, 1);
+    padding: 15px 50px;
+}
+.nav-logo{
+    width: 100px;
 }
 #navbar{
     display: flex;
@@ -16,28 +22,61 @@ nav{
     list-style: none;
     padding: 0 20px;
     position: relative;
+    font-family: 'Nunito';
+    font-style: normal;
+}
+#navbar li a:hover{
+    color: #FFBC01;
+}
+#logo{
+    display: flex;
+    align-items: center;
+}
+#nav-links{
+    display: flex;
+    justify-content: space-between;
+}
+#register{
+    display: flex;
+    margin: .8rem 2rem;
+    display: none;
+    /* height: 5vh; */
+}
+#nav-attendee{
+    margin-right: 1rem;
+    padding: .5rem;
+    background-color: rgba(255, 188, 1, 1);
+    border-radius: 4px;
+    color: white;
+    font-family: 'Lora';
+    font-style: normal;
+}
+#nav-speaker{
+    padding: .5rem;
+    border: 1px solid #FFBC01;
+    color: #FFBC01;
+    border-radius: 4px;
+    font-family: 'Lora';
+    font-style: normal;
+}
+#nav-register{
+    display: none;
+    margin-left: 15rem;
+    padding: .5rem 2rem;
+    background-color: rgba(255, 188, 1, 1);
+    border-radius: 4px;
+    color: white;
+    font-family: 'Lora';
+    font-style: normal;
 }
 #navbar li a{
     text-decoration: none;
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: 600;
     color: #fff;
     transition: 0.3s ease-in-out;
 }
-#navbar li a:hover,
-#navbar li a.active{
-    color: #17cf97;
-}
-#navbar li a:hover::after,
-#navbar li a.active::after{
-    content: '';
-    width: 30%;
-    height: 2px;
-    background: #17cf97;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
+
 #mobile{
     display: none;
 }
@@ -45,7 +84,6 @@ nav{
     color: #fff;
     align-items: center;
 }
-
 @media screen and (max-width:769px){
     #navbar{
         display: flex;
@@ -53,17 +91,17 @@ nav{
         align-items: flex-start;
         justify-content: flex-start;
         position: fixed;
-        top: 83px;
-        right: -300px;
+        top: 63px;
+        right: -400px;
         width: 300px;
         height: 100vh;
-        background: #2a3239;
+        background: rgba(0, 0, 0, 1);
         box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1 );
         padding: 40px 0 0 10px;
         transition: 0.3s ease-in-out;
     }
     #navbar.active{
-        right: 0px;
+        right: -20px;
     }
     #navbar li{
         margin-bottom: 25px;
@@ -75,5 +113,55 @@ nav{
     #mobile i{
         font-size: 24px;
         cursor: pointer;
+    }
+    #nav-register{
+        display: block;
+    }
+    select{
+        width: 19px;
+        background: #FFBC01;
+        border: none;
+        margin-left: .4rem;
+    }
+    option{
+        background: black;
+        color: #FFBC01;
+    }
+}
+@media screen and (max-width:640px){
+    nav{
+        padding: 15px 20px;
+    }
+    #navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 45px;
+        right: -400px;
+        width: 300px;
+        height: 100vh;
+        background: rgba(0, 0, 0, 1);
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1 );
+        padding: 40px 0 0 10px;
+        transition: 0.3s ease-in-out;
+    }
+    #navbar.active{
+        right: -20px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #mobile{
+        display: block;
+    }
+    
+    #mobile i{
+        font-size: 24px;
+        cursor: pointer;
+    }
+    #nav-register{
+        display: none;
     }
 }
