--- a/src/components/navbarStyles.css
+++ b/src/components/navbarStyles.css
@@ -256,6 +256,11 @@ input {
 }
 .mobile-links{
   display: block;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
 }
 .desktop-links{
   display: none;
