--- a/src/components/navbarStyles.css
+++ b/src/components/navbarStyles.css
@@ -271,6 +271,12 @@ input {
     bottom: 0;
     width: 100%;
     height: auto;
-    color: red;
+    color: #fff;
+}
+.social-icons{
+  display: flex;
+  padding: .5rem;
+  width: 60%;
+  justify-content: space-around;
 }
 }
