Completed hero section for ipad

--- a/src/components/herostyle.css
+++ b/src/components/herostyle.css
@@ -7,6 +7,7 @@ section{
 }
 #hero{
     display: flex;
+    justify-content: space-between;
     padding: 2rem .5rem;
 }
 .hero-text{
@@ -36,3 +37,29 @@ section{
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 769px) {
+    section{
+        margin: 2rem 0;
+    }
+    #hero{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem .5rem;
+    }
+    .hero-text{
+        text-align: center;
+        width: 70%;
+    }
+    #register-1{
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2rem;
+    }
+  }
+  @media screen and (max-width: 640px) {
+   
+  }
+  
