--- a/src/components/navbarStyles.css
+++ b/src/components/navbarStyles.css
@@ -7,7 +7,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: blue;
   background: rgba(0, 0, 0, 1);
   padding: 15px 50px;
 }
@@ -29,7 +28,7 @@ nav {
   list-style: none;
   padding: 0 20px;
   position: relative;
-  font-family: "Nunito" ;
+  font-family: "Nunito", 'sans';
   font-style: normal;
   font-weight: 500;
 }
@@ -71,7 +70,7 @@ input {
   border-radius: 4px;
 }
 ::placeholder {
-  font-family: "Nunito";
+  font-family: "Nunito" 'sans';
   font-style: normal;
   display: flex;
   align-items: center;
@@ -122,7 +121,7 @@ input {
   background-color: rgba(255, 188, 1, 1);
   border-radius: 4px;
   color: white;
-  font-family: "Lora";
+  font-family: "Lora", 'sans';
   font-style: normal;
 }
 #nav-speaker {
@@ -140,7 +139,7 @@ input {
   background-color: rgba(255, 188, 1, 1);
   border-radius: 4px;
   color: white;
-  font-family: "Lora";
+  font-family: "Lora", 'sans';
   font-style: normal;
 }
 #navbar li a {
