--- a/src/components/sponsorsdetails.css
+++ b/src/components/sponsorsdetails.css
@@ -14,8 +14,55 @@
 }
 
 @media screen and (max-width: 769px) {
-   
+  #sponsor-details{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    place-items: center;
+    gap: 0rem;
+    /* width: auto;  */
+    overflow: hidden;
+    padding: 2rem;
+}
+.speaker-img{
+  width: 250px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.sponsor-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: #ffff;
+  padding-bottom: 1.5rem;
+}
+
   }
   @media screen and (max-width: 640px) {
-    
+    #sponsor-details{
+      display: grid;
+      grid-template-columns: repeat(2, 2fr);
+      place-items: center;
+      gap: 1rem;
+      /* width: auto;  */
+      overflow: hidden;
+      padding: 2rem;
+  }
+  .speaker-img{
+    width: 150px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+  }
+  .sponsor-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: #ffff;
+    font-size: 10px;
+    padding-bottom: 1.5rem;
+    /* padding-left: .5rem; */
+  }
 }
