--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -2,9 +2,8 @@
 #gallery {
   margin: 0rem 3rem 0rem 3rem;
   padding: 0;
-  /* border: 1px solid red; */
-  /* margin: 0;
-  padding: 0; */
+  width: auto;
+  overflow: hidden;
 }
 .gallery-text{
     margin-top: 3em;
@@ -13,8 +12,6 @@
 .image2,
 .image3 {
   margin-bottom: -4.2rem;
-  /* border: 1px solid green; */
-  /* padding: 1rem; */
 }
 .image1,
 .image2,
@@ -24,7 +21,10 @@
 .image6,
 .image7,
 .image8 {
-  padding: 0.2rem;
+  padding: 0.3rem;
+}
+.image8{
+    padding-left: 1rem;
 }
 #show-more {
   display: flex;
@@ -49,6 +49,9 @@
 .gallery-image-ipad {
   display: none;
 }
+.gallery-image-mobile{
+    display: none;
+}
 @media screen and (max-width: 769px) {
   #gallery {
     margin: 0;
@@ -63,8 +66,11 @@
     height: 150px;
   }
   .gallery-image-ipad {
+    overflow: hidden;
     display: block;
     margin-left: 4rem;
+    width: 90%;
+    border: 1px solid red;
   }
   .gallery-image {
     display: none;
@@ -84,4 +90,33 @@
   }
 }
 @media screen and (max-width: 640px) {
+    .gallery-image-ipad {
+        display: none;
+      }
+    .gallery-image-mobile{
+        display: block;
+        margin-left: auto;
+        overflow-x: hidden;
+        width: auto;
+        width: 90%;
+    }
+    .mobile4{
+        width: 70px;
+        height: 100px;
+    }
+    .mobile2,
+    .mobile3 {
+      margin-bottom: -6.3rem;
+    }
+    .mobile8{
+        width: 68px;
+        height: 200px;
+    }
+    .gallery-text{
+        margin-top: 0em;
+        margin-bottom: 2rem;
+    }
+}
+@media screen and (max-width: 415px){
+
 }
