--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -42,6 +42,14 @@
   border: 1px solid #ffbc01;
   border-radius: 4px;
 }
+a{
+  text-decoration: none;
+}
+#show-more:hover{
+  background-color: #ffbc01;
+  color: aliceblue;
+  transition: .5s ease-in-out;
+}
 .arrow {
   padding-left: 1rem;
   padding-top: 0.2rem;
@@ -52,6 +60,42 @@
 .gallery-image-mobile{
     display: none;
 }
+@media screen and (max-width: 830px) {
+    #gallery {
+      margin: 0;
+      padding: 0;
+    }
+    .ipad2,
+    .ipad3 {
+      margin-bottom: -13.3rem;
+    }
+    .ipad4 {
+      width: 150px;
+      height: 150px;
+    }
+    .gallery-image-ipad {
+      overflow: hidden;
+      display: block;
+      margin-left: 4rem;
+      width: 90%;
+    }
+    .gallery-image {
+      display: none;
+    }
+    .ipad1,
+    .ipad2,
+    .ipad3,
+    .ipad4,
+    .ipad5,
+    .ipad6,
+    .ipad7,
+    .ipad8 {
+      padding: 0.2rem;
+    }
+    #show-more{
+      width: 20%;
+    }
+  }
 @media screen and (max-width: 769px) {
   #gallery {
     margin: 0;
@@ -70,7 +114,6 @@
     display: block;
     margin-left: 4rem;
     width: 90%;
-    border: 1px solid red;
   }
   .gallery-image {
     display: none;
@@ -116,7 +159,10 @@
         margin-top: 0em;
         margin-bottom: 2rem;
     }
+    
 }
 @media screen and (max-width: 415px){
-
+    #show-more{
+        width: 30%;
+      }
 }
