--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -60,6 +60,51 @@ a{
 .gallery-image-mobile{
     display: none;
 }
+#nominees {
+  margin: 0rem 3rem 0rem 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #ffff;
+}
+.nominees-text {
+  margin-top: 2rem;
+  font-family: "Lora", "sans";
+  font-size: 28px;
+  font-weight: 600;
+}
+.nominees--text {
+  font-family: "Lora";
+  font-size: 20px;
+  font-weight: 400;
+}
+a {
+  text-decoration: none;
+}
+.vote {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background: rgba(255, 188, 1, 1);
+  border: 1px solid rgba(255, 188, 1, 1);
+  padding: 0.5rem 3rem;
+  border-radius: 4px;
+  color: #ffff;
+  font-family: 'Lora';
+  font-size: 18px;
+  font-weight: 500;
+}
+.vote:hover{
+    background: none;
+    border: 1px solid rgba(255, 188, 1, 1);
+    transition: .5s ease-in-out;
+}
+/* font-family: "Nunito", "sans";
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: center; */
 @media screen and (max-width: 830px) {
     #gallery {
       margin: 0;
@@ -129,7 +174,7 @@ a{
     padding: 0.2rem;
   }
   #show-more{
-    width: 20%;
+    width: 30%;
   }
 }
 @media screen and (max-width: 640px) {
@@ -160,9 +205,20 @@ a{
         margin-bottom: 2rem;
     }
     
+    .nominees-text {
+      margin-top: 1rem;
+      font-size: 25px;
+      margin-bottom: .5rem;
+    }
+    .nominees--text {
+      font-family: "Lora";
+      font-size: 10px;
+      font-weight: 400;
+      margin-top: .5rem;
+    }
 }
 @media screen and (max-width: 415px){
     #show-more{
-        width: 30%;
+        width: 40%;
       }
 }
